--- a/Ansible/Jenkins/jenkins/tasks/jenkins_credentials.yml
+++ b/Ansible/Jenkins/jenkins/tasks/jenkins_credentials.yml
@@ -8,7 +8,7 @@
 
       def domain = com.cloudbees.plugins.credentials.domains.Domain.global()
 
-      {% for cred in credentials %}
+      {% for cred in usernamePassword %}
       def cred{{ loop.index }} = new UsernamePasswordCredentialsImpl(
         com.cloudbees.plugins.credentials.CredentialsScope.GLOBAL,
         "{{ cred.id }}",
