--- a/Ansible/Jenkins/jenkins/vars/credentials.yml
+++ b/Ansible/Jenkins/jenkins/vars/credentials.yml
@@ -1,5 +1,6 @@
-#generic credentials
-usernamePassword:
+# credentials.yml
+
+usernamePasswordCredentials:
   - id: "sonar-user-credentials-idn"
     username: "admin"
     password: "sonar"
