--- a/Ansible/Jenkins/jenkins/tasks/jenkins_credentials.yml
+++ b/Ansible/Jenkins/jenkins/tasks/jenkins_credentials.yml
@@ -1,27 +1,8 @@
 ---
 
-- name: Add Username/Password credentials
+- name: Add Credentials to Jenkins
   jenkins_script:
-    script: |
-      import com.cloudbees.plugins.credentials.impl.UsernamePasswordCredentialsImpl;
-      import hudson.util.Secret;
-
-      def domain = com.cloudbees.plugins.credentials.domains.Domain.global()
-
-      {% for cred in usernamePassword %}
-      def cred{{ loop.index }} = new UsernamePasswordCredentialsImpl(
-        com.cloudbees.plugins.credentials.CredentialsScope.GLOBAL,
-        "{{ cred.id }}",
-        "{{ cred.id }}",
-        "Username/Password credentials",
-        "{{ cred.username }}",
-        "{{ cred.password }}"
-      );
-      domain.addCredentials(
-        com.cloudbees.plugins.credentials.CredentialsScope.GLOBAL,
-        cred{{ loop.index }}
-      );
-      {% endfor %}
-    jenkins_url: "http://localhost:8080"
+    script: "{{ lookup('file', '../templates/add_credentials.groovy') }}"
     user: "{{ jenkins_admin_username }}"
     password: "{{ jenkins_admin_password }}"
+
