--- a/Ansible/Jenkins/jenkins/tasks/jenkins_credentials.yml
+++ b/Ansible/Jenkins/jenkins/tasks/jenkins_credentials.yml
@@ -2,7 +2,8 @@
 
 - name: Add Credentials to Jenkins
   jenkins_script:
-    script: "{{ lookup('file', '../templates/add_credentials.groovy') }}"
+    script: "{{ lookup('file', '/templates/add_credentials.groovy') }}"
     user: "{{ jenkins_admin_username }}"
     password: "{{ jenkins_admin_password }}"
+  notify: Restart Jenkins
 
