--- a/Ansible/Jenkins/jenkins/tasks/jenkins_credentials.yml
+++ b/Ansible/Jenkins/jenkins/tasks/jenkins_credentials.yml
@@ -2,7 +2,7 @@
 # tasks/main.yml
 - name: Add Jenkins Credentials
   jenkins_script:
-    script: "{{ lookup('template', 'add_credentials.groovy.j2') }}"
+    script: "{{ lookup('file', '../templates/add_credentials.groovy') }}"
     url: "http://localhost:8080"
     user: "{{ jenkins_admin_username }}"
     password: "{{ jenkins_admin_password }}"
