--- a/Ansible/Jenkins/jenkins/vars/credentials.yml
+++ b/Ansible/Jenkins/jenkins/vars/credentials.yml
@@ -1,6 +1,6 @@
 # credentials.yml
 
-usernamePasswordCredentials:
+usernamePassword:
   - id: "sonar-user-credentials-id"
     username: "admin"
     password: "sonar"
