--- a/Ansible/Jenkins/jenkins/tasks/jenkins_credentials.yml
+++ b/Ansible/Jenkins/jenkins/tasks/jenkins_credentials.yml
@@ -1,9 +1,9 @@
 ---
 # tasks/main.yml
 - name: Add Jenkins Credentials
-    jenkins_script:
-      script: "{{ lookup('file', '../templates/add_credentials.groovy') }}"
-      url: "http://localhost:8080"
-      user: "{{ jenkins_admin_username }}"
-      password: "{{ jenkins_admin_password }}"
-    notify: Restart Jenkins
+  jenkins_script:
+    script: "{{ lookup('file', '../templates/add_credentials.groovy.j2') }}"
+    url: "http://localhost:8080"
+    user: "{{ jenkins_admin_username }}"
+    password: "{{ jenkins_admin_password }}"
+  notify: Restart Jenkins
