--- a/Ansible/Jenkins/jenkins/tasks/jenkins_credentials.yml
+++ b/Ansible/Jenkins/jenkins/tasks/jenkins_credentials.yml
@@ -1,9 +1,12 @@
 ---
-# tasks/main.yml
-- name: Add Jenkins Credentials
-  jenkins_script:
-    script: "{{ lookup('file', '../templates/add_credentials.groovy.j2') }}"
-    url: "http://localhost:8080"
-    user: "{{ jenkins_admin_username }}"
-    password: "{{ jenkins_admin_password }}"
+
+- name: Upload configuration scripts
+  template:
+    src: "configuration_as_code/{{ item }}.j2"
+    dest: "{{ jenkins_home }}/casc_configs/{{ item }}"
+    owner: "{{ jenkins_os_user }}"
+    group: "{{ jenkins_os_group }}"
+    mode: 0640
+  loop:
+    - credentials.yml
   notify: Restart Jenkins
