--- a/Ansible/Jenkins/jenkins/tasks/jenkins_credentials.yml
+++ b/Ansible/Jenkins/jenkins/tasks/jenkins_credentials.yml
@@ -2,7 +2,7 @@
 
 - name: Upload configuration scripts
   template:
-    src: "configuration_as_code/{{ item }}.j2"
+    src: "../configuration_as_code/{{ item }}.j2"
     dest: "{{ jenkins_home }}/casc_configs/{{ item }}"
     owner: "{{ jenkins_os_user }}"
     group: "{{ jenkins_os_group }}"
