--- a/Ansible/Jenkins/jenkins/tasks/jenkins_install.yml
+++ b/Ansible/Jenkins/jenkins/tasks/jenkins_install.yml
@@ -43,6 +43,14 @@
     group: "{{ jenkins_os_group }}"
     mode: 0755
 
+- name: Create configuration as code directory
+  file:
+    path: "{{ jenkins_home }}/casc_configs"
+    state: directory
+    owner: "{{ jenkins_os_user }}"
+    group: "{{ jenkins_os_group }}"
+    mode: 0775
+
 - name: Start & Enable Jenkins
   systemd:
     name: jenkins
