--- a/Ansible/Jenkins/jenkins/tasks/jenkins_credentials.yml
+++ b/Ansible/Jenkins/jenkins/tasks/jenkins_credentials.yml
@@ -8,5 +8,5 @@
     group: "{{ jenkins_os_group }}"
     mode: 0640
   loop:
-    - add_credentials.yml
+    - credentials.yml
   notify: Restart Jenkins
