--- a/Ansible/Jenkins/jenkins/vars/credentials.yml
+++ b/Ansible/Jenkins/jenkins/vars/credentials.yml
@@ -1,5 +1,12 @@
 # credentials.yml
 
+basicSSHUserPrivateKey:
+  - id: "stg-appservers-credentials-id"
+    username: "ec2-user"
+    rsa_key: "STGappkeypair.pem"
+  - id: "prd-appservers-credentials-id"
+    username: "ec2-user"
+    rsa_key: "appkeypair.pem"
 usernamePassword:
   - id: "sonar-user-credentials-id"
     username: "admin"
