--- a/Ansible/Jenkins/jenkins/vars/credentials.yml
+++ b/Ansible/Jenkins/jenkins/vars/credentials.yml
@@ -2,11 +2,11 @@
 
 basicSSHUserPrivateKey:
   - id: "stg-appservers-credentials-id"
-    username: "ec2-user"
+    username: "~/.ssh/ec2-user"
     rsa_key: "STGappkeypair.pem"
   - id: "prd-appservers-credentials-id"
     username: "ec2-user"
-    rsa_key: "appkeypair.pem"
+    rsa_key: "~/.ssh/appkeypair.pem"
 usernamePassword:
   - id: "sonar-user-credentials-id"
     username: "admin"
