--- a/Ansible/Jenkins/jenkins/vars/credentials.yml
+++ b/Ansible/Jenkins/jenkins/vars/credentials.yml
@@ -2,8 +2,8 @@
 
 basicSSHUserPrivateKey:
   - id: "stg-appservers-credentials-id"
-    username: ".ssh/ec2-user"
-    rsa_key: "STGappkeypair.pem"
+    username: "ec2-user"
+    rsa_key: ".ssh/STGappkeypair.pem"
   - id: "prd-appservers-credentials-id"
     username: "ec2-user"
     rsa_key: ".ssh/appkeypair.pem"
