--- a/Ansible/Jenkins/jenkins/vars/credentials.yml
+++ b/Ansible/Jenkins/jenkins/vars/credentials.yml
@@ -3,10 +3,10 @@
 basicSSHUserPrivateKey:
   - id: "stg-appservers-credentials-id"
     username: "ec2-user"
-    rsa_key: ".ssh/STGappkeypair.pem"
+    rsa_key: "~/.ssh/STGappkeypair.pem"
   - id: "prd-appservers-credentials-id"
     username: "ec2-user"
-    rsa_key: ".ssh/appkeypair.pem"
+    rsa_key: "~/.ssh/appkeypair.pem"
 usernamePassword:
   - id: "sonar-user-credentials-id"
     username: "admin"
