--- a/Ansible/Jenkins/jenkins/tasks/jenkins_variables.yml
+++ b/Ansible/Jenkins/jenkins/tasks/jenkins_variables.yml
@@ -12,7 +12,7 @@
 
 - name: Install Jenkins Global Environment Variables
   jenkins_script:
-    username: "{{ jenkins_admin_username }}"
+    user: "{{ jenkins_admin_username }}"
     password: "{{ jenkins_admin_password }}"
     url: "http://localhost:8080"
     script: "{{ lookup('file', '/tmp/variables.groovy') }}"
