--- a/Ansible/Jenkins/jenkins/tasks/main.yml
+++ b/Ansible/Jenkins/jenkins/tasks/main.yml
@@ -7,3 +7,4 @@
  - include: jenkins_plugins.yml
  - include: jenkins_variables.yml
  - include: jenkins_credentials.yml
+ - include: jenkins_jobs.yml
