--- a/Ansible/Jenkins/jenkins/tasks/jenkins_install.yml
+++ b/Ansible/Jenkins/jenkins/tasks/jenkins_install.yml
@@ -27,7 +27,7 @@
     name: jenkins
     state: present
 
-- name: Create custom init scripts directory.
+- name: Create custom init scripts directory
   file:
     path: "{{ jenkins_home }}/init.groovy.d"
     state: directory
