--- a/Ansible/Jenkins/jenkins/tasks/jenkins_jobs.yml
+++ b/Ansible/Jenkins/jenkins/tasks/jenkins_jobs.yml
@@ -1,9 +1,29 @@
-- name: Copy STG pipeline job to temporary directory
+- name: Read pipeline.groovy content
+  slurp:
+    src: "../templates/STG-generic_pipeline.groovy"
+  register: groovy_content
+
+- name: Convert Groovy to XML
+  set_fact:
+    job_xml: |
+      <flow-definition plugin="workflow-job@2.40">
+        <actions/>
+        <description>STG-Pipeline-Job</description>
+        <keepDependencies>false</keepDependencies>
+        <properties/>
+        <definition class="org.jenkinsci.plugins.workflow.cps.CpsFlowDefinition" plugin="workflow-cps@2.90">
+          <scriptText>
+            {{ groovy_content.content | b64decode | indent(14) }}
+          </scriptText>
+          <sandbox>false</sandbox>
+        </definition>
+        <triggers/>
+      </flow-definition>
+
+- name: Write job config XML
   copy:
-    src: "../templates/STG-pipeline_job.xml"
-    dest: "/tmp/STG-pipeline_job.xml"
-  delegate_to: localhost
-  run_once: true
+    content: "{{ job_xml }}"
+    dest: /tmp/STG-pipeline_job.xml
 
 - name: Download Jenkins CLI JAR
   get_url:
