--- a/Ansible/Jenkins/jenkins/tasks/jenkins_jobs.yml
+++ b/Ansible/Jenkins/jenkins/tasks/jenkins_jobs.yml
@@ -10,6 +10,10 @@
     src: "/tmp/STG-generic_pipeline.groovy"
   register: groovy_content
 
+- name: Encode groovy content to Base64
+  set_fact:
+    groovy_content_encoded: "{{ groovy_content.content | b64encode }}"
+
 - name: Convert Groovy to XML
   set_fact:
     job_xml: |
@@ -19,13 +23,14 @@
         <keepDependencies>false</keepDependencies>
         <properties/>
         <definition class="org.jenkinsci.plugins.workflow.cps.CpsFlowDefinition" plugin="workflow-cps@2.90">
-          <scriptText>
-            {{ groovy_content.content | b64decode | indent(14) }}
-          </scriptText>
-          <sandbox>false</sandbox>
+            <scriptText>
+                {{ groovy_content_encoded | indent(14) }}
+            </scriptText>
+            <sandbox>false</sandbox>
         </definition>
         <triggers/>
-      </flow-definition>
+     </flow-definition>
+
 
 - name: Write job config XML
   copy:
