--- a/Ansible/Jenkins/jenkins/tasks/jenkins_jobs.yml
+++ b/Ansible/Jenkins/jenkins/tasks/jenkins_jobs.yml
@@ -10,6 +10,11 @@
     src: "/tmp/STG-generic_pipeline.groovy"
   register: groovy_content
 
+- debug:
+    var: groovy_content.content
+- debug:
+    var: groovy_content
+
 - name: Convert Groovy to XML
   set_fact:
     job_xml: |
@@ -17,11 +22,9 @@
         <actions/>
         <description>STG-Pipeline-Job</description>
         <keepDependencies>false</keepDependencies>
-        <properties/>
+        <properties/>        
         <definition class="org.jenkinsci.plugins.workflow.cps.CpsFlowDefinition" plugin="workflow-cps@2.90">
-            <scriptText>
-                {{ groovy_content.content | b64decode | indent(14) }}
-            </scriptText>
+            <scriptFile>/tmp/STG-generic_pipeline.groovy</scriptFile>
             <sandbox>false</sandbox>
         </definition>
         <triggers/>
@@ -41,11 +44,10 @@
 
 - name: Create Jenkins job using CLI
   command: >
-    java -jar /var/lib/jenkins/jenkins-cli.jar
+    {{ jenkins_cli_command }}
     -s http://localhost:8080/
-    -auth jenkins:jenkins
-    create-job STG-Pipeline-Job-2
+    -auth {{ jenkins_admin_username }}:{{ jenkins_admin_username }}
+    create-job STG-Pipeline-Job
   args:
-    stdin: "{{ groovy_content }}"
-
+    stdin: "{{ lookup('file', '/tmp/STG-pipeline_job.xml') }}"
 
