--- a/Ansible/Jenkins/jenkins/tasks/jenkins_jobs.yml
+++ b/Ansible/Jenkins/jenkins/tasks/jenkins_jobs.yml
@@ -22,9 +22,11 @@
         <actions/>
         <description>STG-Pipeline-Job</description>
         <keepDependencies>false</keepDependencies>
-        <properties/>        
+        <properties/>
         <definition class="org.jenkinsci.plugins.workflow.cps.CpsFlowDefinition" plugin="workflow-cps@2.90">
-            <scriptFile>/tmp/STG-generic_pipeline.groovy</scriptFile>
+            <script>
+                {{ groovy_content.content | b64decode | indent(14) }}
+            </script>
             <sandbox>false</sandbox>
         </definition>
         <triggers/>
