--- a/Ansible/Sonar/sonarqube/tasks/sonar_install.yml
+++ b/Ansible/Sonar/sonarqube/tasks/sonar_install.yml
@@ -7,6 +7,11 @@
   become: yes
   become_user: root
 
+- name: Check if Sonar API is available
+  wait_for:
+    port: 9000
+    delay: 10
+
 - name: Create SonarQube Project
   uri:
     url: "http://localhost:9000/api/projects/create"
