--- a/Ansible/Nexus/nexus/tasks/nexus_install.yml
+++ b/Ansible/Nexus/nexus/tasks/nexus_install.yml
@@ -97,3 +97,34 @@
     state: started
     enabled: yes
     daemon_reload: yes
+
+- name: Check if Nexus API is available
+  wait_for:
+    port: 8081
+    delay: 10
+
+- name: Read admin password file
+  ansible.builtin.slurp:
+    src: /nexus/nexus-data/admin.password
+  register: admin_password_file
+
+- name: Extract password from file content
+  set_fact:
+    initial_admin_password: "{{ admin_password_file.content | b64decode | ansible.builtin.decode('utf-8') }}"
+
+- name: Display the extracted password
+  debug:
+    var: initial_admin_password
+
+- name: Set Initial Password for Nexus
+  uri:
+    url: "http://localhost:8081/service/rest/beta/security/users/admin/change-password"
+    method: POST
+    url_username: admin
+    url_password: "{{ initial_admin_password }}"
+    body_format: json
+    body: |
+      {
+        "password": "your-new-admin-password"
+      }
+
