--- a/Ansible/Nexus/nexus/tasks/nexus_install.yml
+++ b/Ansible/Nexus/nexus/tasks/nexus_install.yml
@@ -125,6 +125,6 @@
     body_format: json
     body: |
       {
-        "password": "your-new-admin-password"
+        "password": "nexus"
       }
 
